# metatypes

./: .gitignore  2022-innopolis-university-thesis-guidelines.md  AGENTS.md  ANNOTATION_RU.md  CLAUDE.md  LICENCE  PLAN.md  README.md  THESIS.md  THESIS_PLAN.md  WHY_METATYPES.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
examples/: future_orm.py  intersections.py  orm.py  vectors.py
latex/: innopolis-format.tex
scripts/: build_annotation_pdf.sh  build_thesis_pdf.sh  format_md_python.py  prepend_title_page.sh
src/metatypes/: __init__.py
src/metatypes/research_examples/: vectors.py
src/pydantic_extension/: __init__.py
src/typed_sql/: core.py  example.py
src/typed_sql/example/: table.py
tests/: conftest.py  test_error_model.py  test_insert.py  test_insert_input.py  test_insert_synth.py  test_model_dump_kwargs.py  test_pydantic_extension.py  test_unpack_kwargs.py  test_update_class.py
